[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Levels/Level1/s_ending_1.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.69385, 288.472, 0, 0, 0, 0, -8.11646, -1688.65 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.96265, 289.013, 0, 0, 0, 0, 1.96265, -3657.89 )
}

[node name="Ending1" type="Node2D"]
script = ExtResource( 1 )

[node name="StartingPoint" type="VisibilityNotifier2D" parent="."]
position = Vector2( 19.9152, 305.349 )
scale = Vector2( 1.66884, 1.51415 )

[node name="ShuttlePath" type="Path2D" parent="."]
visible = false
curve = SubResource( 1 )

[node name="CameraPath" type="Path2D" parent="."]
visible = false
curve = SubResource( 2 )

[node name="Follow" type="PathFollow2D" parent="CameraPath"]
position = Vector2( 1.96265, 289.013 )
rotation = -1.5708

[node name="Camera2D" type="Camera2D" parent="CameraPath/Follow"]

[node name="Tween" type="Tween" parent="."]

[node name="icon" type="Sprite" parent="."]
visible = false
position = Vector2( 3.2395, 287.946 )
texture = ExtResource( 2 )
[connection signal="screen_entered" from="StartingPoint" to="." method="_on_VisibilityNotifier2D_screen_entered"]
